test_suite/tests/ui/common/constructor_visibility_invalid.stderr
error: Invalid constructor visibility.

       Valid options:
           constructor(visibility = pub)         public (default)
           constructor(visibility = pub(crate))  crate-level
           constructor(visibility = private)     defining module only

 --> tests/ui/common/constructor_visibility_invalid.rs:6:30
  |
6 |     constructor(visibility = invalid_visibility_value),
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^
